--- a/conf/apache/apache-local.conf
+++ b/conf/apache/apache-local.conf
@@ -5,9 +5,18 @@
 
 # Redirect all HTTP traffic to HTTPS; applies to all hostnames
 <VirtualHost *:80>
+    DocumentRoot "/var/www/html"
     RewriteEngine On
-    RewriteCond %{HTTPS} off
     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+</VirtualHost>
+
+#HTTPS configuration for cms.test
+<VirtualHost *:443>
+    ServerName cms.test
+    DocumentRoot "/var/www/html"
+    SSLEngine on
+    SSLCertificateFile /etc/pki/tls/certs/localhost.crt
+    SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
 </VirtualHost>
 
 
