Changed document root to /www_data/www

--- a/web-node/conf/apache/apache-local.conf
+++ b/web-node/conf/apache/apache-local.conf
@@ -5,7 +5,7 @@
 
 # Redirect all HTTP traffic to HTTPS; applies to all hostnames
 <VirtualHost *:80>
-    DocumentRoot "/var/www/html"
+    DocumentRoot "/www_data/www"
     RewriteEngine On
     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </VirtualHost>
@@ -13,10 +13,13 @@
 #HTTPS configuration for cms.test
 <VirtualHost *:443>
     ServerName cms.test
-    DocumentRoot "/var/www/html"
+    DocumentRoot "/www_data/www"
     SSLEngine on
     SSLCertificateFile /etc/pki/tls/certs/localhost.crt
     SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
 </VirtualHost>
 
+#set apache user 
+User websvc
+Group webgrp
 
