Changed apache user and group to non-root

--- a/web-node/conf/php/zzz-env.conf
+++ b/web-node/conf/php/zzz-env.conf
@@ -4,3 +4,7 @@
 ; (required in Docker so PHP can access variables defined via docker-compose)
 [www]
 clear_env = no
+
+#change apache user and group; do not run as root 
+user = websvc
+group = webgrp
