--- a/web-node/conf/php/zzz-env.conf
+++ b/web-node/conf/php/zzz-env.conf
@@ -5,6 +5,6 @@
 [www]
 clear_env = no
 
-#change apache user and group; do not run as root 
+;change apache user and group; do not run as root 
 user = websvc
 group = webgrp
