--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
     container_name: db-secondary
 
     env_file:
-      - ./db-secondary/.env
+      - .env
 
     volumes:
       - mariadb_secondary_data:/var/lib/mysql
