--- a/nfs/Dockerfile
+++ b/nfs/Dockerfile
@@ -3,22 +3,25 @@ FROM rockylinux/rockylinux:9
 # Clean DNF cache to avoid module metadata corruption issues
 RUN dnf clean all && rm -rf /var/cache/dnf
 
-# Install NFS utilities
-RUN dnf -y install nfs-utils rpcbind procps-ng iproute
-
+# Install necessary packages including NFS-Ganesha (Rocky/CentOS Storage SIG)
+# We enable 'crb' (Code Ready Builder) for dependencies, then epel, then storage SIG.
+RUN dnf -y install 'dnf-command(config-manager)'
+RUN dnf config-manager --set-enabled crb
+RUN dnf -y install epel-release
+RUN dnf -y install centos-release-nfs-ganesha
+RUN dnf -y install nfs-ganesha nfs-ganesha-vfs rpcbind procps-ng iproute hostname rsync
 RUN dnf clean all
 
-# Create the shared service identity (match this in web-node too)
-RUN groupadd -g 1001 webgrp && useradd  -u 1001 -g 1001 -M -s /sbin/nologin websvc
-
-# Create export directory
+# Setup exports directory
 RUN mkdir -p /exports/shared
 RUN chown -R 1001:1001 /exports/shared
+
+# Copy Ganesha config
+COPY ganesha.conf /etc/ganesha/ganesha.conf
 
 # Copy entrypoint script and make it executable 
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
-
 
 # Expose NFS-related ports
 EXPOSE 111 2049 20048
