--- a/web-node/conf/apache/apache-local.conf
+++ b/web-node/conf/apache/apache-local.conf
@@ -17,6 +17,11 @@
     SSLEngine on
     SSLCertificateFile /etc/pki/tls/certs/localhost.crt
     SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
+    
+    <Directory "/www_data/www">
+        AllowOverride All
+        Require all granted
+    </Directory>
 </VirtualHost>
 
 #set apache user 
