--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   web-node:
     build:
       context: ./web-node
-    image: local/rocky-apache-php:dev
+    image: local/rocky-apache-php:${IMAGE_TAG}
 
     env_file:
       - .env
@@ -23,7 +23,6 @@ services:
       # PHP runtime custom conf
       - ./web-node/conf/php/99-php.ini:/etc/php.d/99-php.ini:ro
       # PHP-FPM pool override custom conf
-      # PHP-FPM pool override custom conf
       - ./web-node/conf/php/zzz-env.conf:/etc/php-fpm.d/zzz-env.conf:ro
 
     depends_on:
@@ -38,7 +37,7 @@ services:
   nfs:
     build:
       context: ./nfs
-    image: local/nfs-server:dev
+    image: local/nfs-server:${IMAGE_TAG}
     container_name: nfs
     privileged: true
 
@@ -52,7 +51,7 @@ services:
 
     networks:
       nfs_net:
-        ipv4_address: 172.28.0.10
+        ipv4_address: ${NFS_IP}
 
   db-primary:
     image: mariadb:10.11-ubi9
@@ -105,7 +104,7 @@ networks:
     internal: true
     ipam:
       config:
-        - subnet: 172.28.0.0/16
+        - subnet: ${NFS_SUBNET}
 
 volumes:
   mariadb_data:
